--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://meta-tags-ember-sample.netlify.app/" />
     <meta property="og:title" content="How to set meta tags in an Ember application" />
     <meta property="og:description" content="It can be confusing to figure out how to set up your meta tags in an Ember app, especially if you want to get it right the first time! This guide shows you how." />
-    <meta property="og:image" content="https://meta-tags-ember-sample.netlify.app/assets/social-card.png" />
+    <meta property="og:image" content="https://meta-tags-ember-sample.netlify.app/assets/social-share-facebook.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <title>Meta Tags in Ember apps</title>
